--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "file-templates",
   "displayName": "File Templates",
   "description": "This Extension allows to quickly create new files based on defined templates.",
-  "version": "1.2.0",
-  "author": "Bruno Paz",
+  "version": "1.3.0",
+  "author": "Lee Crosby",
   "publisher": "brpaz",
   "homepage": "https://github.com/brpaz/vscode-file-templates-ext",
   "repository": {
