--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "file-templates",
   "displayName": "File Templates",
   "description": "This Extension allows to quickly create new files based on defined templates.",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "author": "Lee Crosby",
-  "publisher": "brpaz",
+  "publisher": "Cygnut",
   "homepage": "https://github.com/brpaz/vscode-file-templates-ext",
   "repository": {
     "type": "git",
@@ -79,7 +79,7 @@
   "devDependencies": {
     "tslint": "^3.13.0",
     "typescript": "^1.8.5",
-    "vscode": "^0.11.0"
+    "vscode": "^1.1.37"
   },
   "dependencies": {
     "moment": "^2.18.1"
